src/test/resources/dev/blachut/svelte/lang/codeInsight/inspections/generics/GenericsRequiresTypeScript.svelte
<script
<error descr="The 'generics' attribute requires 'lang=\"ts\"' on the script tag">generics</error>="T extends string">
export let value;
</script>
